[gd_scene load_steps=3 format=3 uid="uid://ca8bburgidfng"]

[ext_resource type="Script" path="res://scripts/item_holder.gd" id="1_vbic7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_328v3"]
radius = 0.1

[node name="ItemHolder" type="RigidBody3D"]
collision_layer = 0
angular_velocity = Vector3(0, 0.0169297, 0)
script = ExtResource("1_vbic7")

[node name="SurfaceArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="SurfaceArea"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_328v3")

[connection signal="body_entered" from="SurfaceArea" to="." method="_on_surface_area_body_entered"]
